--- a/app/public/index.html
+++ b/app/public/index.html
@@ -152,11 +152,9 @@
             </div>
             <div class="subtitle">Looks like you've successfully rendered the 404 page</div>
             <br>
-            <!-- TODO: Add your matric no. here-->
-            <div class="subtitle">Matric No.: </div>
+            <div class="subtitle">Matric No.: A0196511E</div>
             <br>
-            <!-- TODO: Add your name here-->
-            <div class="subtitle">Name: </div>
+            <div class="subtitle">Name: Terence Ho Wei Yang</div>
             <br>
     </div>
     </section>
